<resources>
    <!-- General -->
    <string name="app_name">Guide7</string>
    <string name="developer_email">barny.eder@gmail.com</string>
    <string name="filter">Filter...</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
	<string name="ok">OK</string>
    <string name="channelStatic">Static timetable</string>
    <string name="channelChanges">Changed events</string>
    <string name="channelAppointments">Upcoming Appointments</string>

    <!-- Login -->
    <string name="passwordHint">Password</string>
    <string name="usernameHint">Username</string>
    <string name="loginButtonLabel">Sign in</string>
    <string name="loginRequestLabel">Use ZPA System credentials to login.</string>
    <string name="loginNotice">You will be logged in automatically after this initial login.</string>
    <string name="loginMessage">Login to ZPA...</string>

    <!-- Week Plan -->
    <string name="loadingMessage">Downloading schedule...</string>
    <string name="refresh">Refresh</string>
    <string name="staticEventNotificationTitle">Next event</string>
    <string name="eventCancelled">CANCELLED</string>
    <string name="showCancelledEventsTitle">Show cancelled lectures.</string>
    <string name="showCancelledEventsSummary">Shows cancelled lectures in another color.</string>
    <string name="weekPlanChangeNotificationTitle">Change Notifications</string>
	<string name="weekPlanChangeNotificationSummary">Get notified when your schedule changes.</string>
	<string name="scheduleChangedTitle">Schedule changed</string>
	<string name="newScheduleItem">New schedule item</string>
	<string name="scheduleChangedItems">changed items</string>
	<string name="scheduleNewItems">new items</string>

    <!-- Deadlines and Appointments -->
    <string name="appointmentLoadingError">An error occurred. :(</string>
    <string name="searchingForAppointments">Searching for appointments...</string>

    <!-- Room Search -->
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="searchingForRoomMessage">Searching for rooms...</string>
    <string name="roomSearchError">An error happened while searching for rooms. :(</string>
    <string name="seats">Seats</string>

    <!-- Notice Board -->
    <string name="currentlyNotAvailableBlackboard">The Notice board is currently not available due to the FI System shutdown.</string>
    <string name="searchingForBoardEntriesMessage">Searching for news...</string>
    <string name="boardEntrySearchError">An error occurred while searching for news. :(</string>
    <string name="noticeBoardChangedNotificationTitle">Notice board</string>
    <string name="noticeBoardChangedNotificationMessage">entries in the notice board have been changed.</string>

    <!-- Appointments -->
    <string name="upcomingAppointmentNotificationTitle">Upcoming appointment</string>

    <!-- Error Messages -->
    <string name="loginErrorMessage">Could not login to ZPA. Check that the ZPA System is up and running or maybe there is a problem with your connection.</string>
    <string name="badLoginMessage">The provided username and/or password is wrong.</string>
    <string name="parseMonthPlanErrorMessage">Could not read schedule from ZPA.</string>
    <string name="weekPlanParsingIncompletely">The schedule could not be read completely. Some lectures might be missing.</string>

    <!-- Canteen Menu -->
    <string name="searchingForCanteenMenus">Updating menu...</string>
    <string name="canteenMenuLoadingError">An error occurred while updating the menu. :(</string>

    <!-- Menu -->
    <string name="toLogin">Return to login</string>
    <string name="action_settings">Settings</string>

    <!-- Settings -->
    <string name="scheduleSettings">Schedule</string>
    <string name="scheduleView">Schedule display</string>
    <string name="days">Days</string>
    <string name="weekplan_group">Schedule</string>
    <string name="displayedDays">Displayed days</string>
    <string name="displayedDaysSummary">How many days should be shown in the schedule</string>
    <string name="staticScheduleNotification">Static event notification</string>
    <string name="staticScheduleNotificationSummary">Shows a static notification showing the next event</string>
    <string name="noticeboard_group">Notice board</string>
    <string name="noticeboard_notification_prop">Change notification</string>
    <string name="noticeboard_notification_prop_summary">Shows a notification once the notice board changes.</string>
    <string name="appointments_group">Appointments</string>
    <string name="appointments_notification_title">Upcoming appointment notification (Experimental)</string>
    <string name="appointments_notification_summary">Get notified about upcoming appointments a day before.</string>
	<string name="otherSettings">Other</string>
	<string name="clearCacheTitle">Clear Cache</string>
	<string name="clearCacheSummary">Delete all cached data (Except for the login credentials).</string>
	<string name="clearCacheSuccessMessage">Cache has been cleared.</string>
    <string name="clearCustomEntriesTitle">Delete custom schedule entries</string>
    <string name="clearCustomEntriesSummary">Deletes all custom schedule entries that have been added.</string>
    <string name="clearCustomEntriesSuccessMessage">Custom entries have been removed.</string>

    <!-- Info -->
    <string name="libraries">Libraries</string>

    <!-- Error View -->
    <string name="errorViewHeader">On no! An Error happened and I didn\'t foresee it to create a beautiful dialog for it. I\'m sorry! :(</string>

    <!-- Main Activity -->
    <string name="title_activity_main">Guide7</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_other">Other</string>
    <string name="navigation_drawer_info">Information</string>
    <string name="navigation_drawer_item_blackboard">Notice board</string>
    <string name="navigation_drawer_item_schedule">Schedule</string>
    <string name="navigation_drawer_item_appointments">Appointments</string>
    <string name="navigation_drawer_item_menu">Canteen Menu</string>
    <string name="navigation_drawer_item_roomsearch">Room search</string>
    <string name="navigation_drawer_item_settings">Settings</string>
    <string name="navigation_drawer_item_contact">Contact</string>
    <string name="navigation_drawer_item_datapolicy">Data policy</string>
    <string name="navigation_drawer_item_info">Info</string>
    <string name="navigation_drawer_item_logout">Logout</string>

    <!-- Custom entry -->
    <string name="custom_entry_title">Title</string>
    <string name="custom_entry_description">Description</string>
    <string name="custom_entry_recurring">Recurring</string>
    <string name="custom_entry_default_duration">01:30</string>
    <string name="custom_entry_location">Location</string>
    <string name="custom_entry_start_date">Start date</string>
    <string name="custom_entry_duration">Duration</string>
    <string name="custom_entry_until">Until</string>

    <!-- schedule widget -->
    <string name="schedule_widget_next">"Next: "</string>
    <string name="schedule_widget_today">Today</string>
    <string name="schedule_widget_tomorrow">Tomorrow</string>
    <string name="schedule_widget_location">"Location: "</string>
</resources>
