<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/weekplan_group">

        <android.support.v7.preference.ListPreference
            android:title="@string/displayedDays"
            android:summary="@string/displayedDaysSummary"
            android:key="displayedDaysPrefKey"
            android:defaultValue="2"
            android:entries="@array/displayableDaysValues"
            android:entryValues="@array/displayableDaysArray"/>

        <android.support.v7.preference.SwitchPreferenceCompat
            android:title="@string/staticScheduleNotification"
            android:summary="@string/staticScheduleNotificationSummary"
            android:key="staticScheduleNotificationKey"
            android:defaultValue="false"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/noticeboard_group">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:title="@string/noticeboard_notification_prop"
            android:summary="@string/noticeboard_notification_prop_summary"
            android:key="noticeboardNotificationKey"
            android:defaultValue="true"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>