<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_login"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="1"
              tools:context="de.be.thaw.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_centerInParent="true"
                android:elevation="0dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_span="2"
                        android:layout_weight="1.0"
                        android:text="@string/loginRequestLabel"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/usernameFieldIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="{fa-user}"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="36sp"/>

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/usernameFieldIcon"
                        android:layout_toRightOf="@+id/usernameFieldIcon"
                        android:layout_weight="1.0"
                        android:ems="10"
                        android:hint="@string/usernameHint"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textSize="18sp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/passwordFieldIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="{fa-unlock}"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="36sp"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/passwordFieldIcon"
                        android:layout_toRightOf="@+id/passwordFieldIcon"
                        android:layout_weight="1.0"
                        android:ems="10"
                        android:hint="@string/passwordHint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="18sp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10sp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_span="2"
                        android:layout_weight="1.0"
                        android:paddingBottom="20sp">

                        <Button
                            android:id="@+id/loginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:onClick="onLogin"
                            android:text="@string/loginButtonLabel"
                            android:textAlignment="center"/>
                    </RelativeLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_span="2"
                        android:layout_weight="1.0"
                        android:text="@string/loginNotice"
                        android:textAlignment="center"/>
                </TableRow>

            </TableLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
